--- a/Skontrum/Skontrum.csproj
+++ b/Skontrum/Skontrum.csproj
@@ -65,6 +65,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormBrakujace.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBrakujace.Designer.cs">
+      <DependentUpon>FormBrakujace.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormKsiazkaWypozyczona.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,6 +123,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Zmienne.cs" />
+    <EmbeddedResource Include="FormBrakujace.resx">
+      <DependentUpon>FormBrakujace.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormKsiazkaWypozyczona.resx">
       <DependentUpon>FormKsiazkaWypozyczona.cs</DependentUpon>
     </EmbeddedResource>
