--- a/Skontrum/Skontrum.csproj
+++ b/Skontrum/Skontrum.csproj
@@ -50,6 +50,9 @@
     <Reference Include="ClosedXML">
       <HintPath>.\ClosedXML.dll</HintPath>
     </Reference>
+    <Reference Include="DGV Printer">
+      <HintPath>.\DGV Printer.dll</HintPath>
+    </Reference>
     <Reference Include="DocumentFormat.OpenXml">
       <HintPath>.\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
@@ -70,6 +73,12 @@
     </Compile>
     <Compile Include="FormBrakujace.Designer.cs">
       <DependentUpon>FormBrakujace.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormDrukuj.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDrukuj.Designer.cs">
+      <DependentUpon>FormDrukuj.cs</DependentUpon>
     </Compile>
     <Compile Include="FormKsiazkaWypozyczona.cs">
       <SubType>Form</SubType>
@@ -125,6 +134,9 @@
     <Compile Include="Zmienne.cs" />
     <EmbeddedResource Include="FormBrakujace.resx">
       <DependentUpon>FormBrakujace.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDrukuj.resx">
+      <DependentUpon>FormDrukuj.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormKsiazkaWypozyczona.resx">
       <DependentUpon>FormKsiazkaWypozyczona.cs</DependentUpon>
